--- a/css/shem.css
+++ b/css/shem.css
@@ -23,7 +23,7 @@ body{
 #menue_bar{
 
 	background-color: #777;
-	height: 50px;
+	height:50px;
 }
 
 #menue_bar p{
@@ -62,7 +62,15 @@ li:hover{
 */
 .my-card {
 	position: relative;
+
+
 }
+
+
+
+
+
+
 #card{
 
 	height: 100px;
@@ -191,10 +199,8 @@ li:hover{
 
 
 p{ 
-	
 
 	left: 100px;
-	width: 40%;
 	text-align: left;
 	font-family: ;
 	font-size: 14px;
@@ -224,22 +230,30 @@ img{
 
 
 #info_text{
-	height: 100px;	
+	height: 60px;	
 	width: 80%;
 	background-color: #fff;
-
+	padding-top: 40px;
 
 }
 
 .ranking{
 
-	height: 20px;
+	height: 40px;
 	background-color: #345;
-	width: 10%;
+	width: 40px;
 	position: absolute;
-	right:0;
-	top: 0;
+	right:20px;
+	top: 15px;
 	position: absolute;
+	border-radius: 50%;
+
+}
+
+.ranking p{
+
+	text-align: center;
+	padding-top: 10px;
 }
 .money_raised{
 	height: 20px;
