--- a/css/shem.css
+++ b/css/shem.css
@@ -54,7 +54,8 @@ li{
 li:hover{
 	background-color: #888;
 }
-/* it is counter productive to repeat the same thing
+/* 
+	it is counter productive to repeat the same thing
 	instead you can put that in one class and assing the same
 	class to multiple element.
 	// TODO: refactor the card ... instead of repeating ids, use class.
@@ -63,20 +64,15 @@ li:hover{
 .my-card {
 	position: relative;
 
-
 }
 
 
-
-
-
-
-#card{
+.card{
 
 	height: 100px;
 	width: 25%;
 	background-color: #666;
-	margin-top:200px;
+	margin-top:50px;
 	float:left;
 	position: relative;
 	min-width: 490px;
@@ -84,118 +80,7 @@ li:hover{
 
 }
 
-#card2{
 
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:200px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-#card3{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:200px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-
-
-#card4{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-
-#card5{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-
-#card6{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-
-#card7{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-#card8{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-#card9{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
-
-
-#card10{
-
-	height: 100px;
-	width: 25%;
-	background-color: #666;
-	margin-top:100px;
-	float:left;
-	position: relative;
-	min-width: 490px;
-	margin-left: 5%;
-}
 
 
 p{ 
@@ -213,52 +98,65 @@ p{
 	height: 100px;
 	width: 100px;
 	float: left;
-	background-color: #777; 
-	float: left;
-
-
 	
 }
+
+
+.clients_image_female{
+
+	height: 100px;
+	width: 100px;
+	float: left;
+	background-image: url(images/female2.jpg);
+	background-size: 190px;
+	background-repeat: no-repeat;
+	background-position: top center;
+
+	
+
+}
+
 img{
 
 	max-width: 100%;
 	height: 100px;
 	float: left;
-
-
+	border: none;
+	
 }
 
 
 #info_text{
 	height: 60px;	
 	width: 100%;
-	background-color: #fff;
+	background-color:#fff;
 	padding-top: 40px;
 
 }
 
+
 .ranking{
 
-	height: 40px;
-	background-color: #345;
-	width: 40px;
+	height: 50px;
+	background-color: green;
+	width: 50px;
 	position: absolute;
 	right:20px;
 	top: 15px;
 	position: absolute;
-	border-radius: 50%;
+	border-radius: 50px;
 
 }
 
 .ranking p{
 
 	text-align: center;
-	padding-top: 10px;
+	padding-top: 15px;
+	color: #fff;
 }
 .money_raised{
 	height: 20px;
-	background-color: #345;
-	width: 11%;
+	width: 100px;
 	position: absolute;
 	right:0;
 	bottom: 0;
@@ -267,7 +165,11 @@ img{
 }
 
 
+.money_raised p{
+	
+	text-align: center;
 
+}
 
 @font-face {
     font-family: myFirstFont;
