--- a/css/game-card.css
+++ b/css/game-card.css
@@ -1,4 +1,5 @@
 /* card module */
+*{margin: 0; padding: 0;}
 @font-face {
 	font-family: myFirstFont;
 	src: url(fonts/Brandon_thin_it.otf);
@@ -6,13 +7,13 @@
 	src: url(fonts/Brandon_med.otf);
 }
 .game-card{
-	height: 350px;
-	width: 15%;
+	height: 100%;
+	width: 100%;
 	float: left;
 	position: relative;
 	background-color: #777;
 	min-width: 170px;
-	max-width: 200px;
+	
 }
 .game-card--display {
 	height: 150px;
@@ -24,7 +25,7 @@
 .game-card--image {
 	min-height: 170px; 
 	min-width: 90px; 
-	max-width: 100%;
+	width: 100%;
 	float: left;
 	border: none;
 }
@@ -36,3 +37,6 @@
 	font-family: "myFirstFont", arial, sans-serif;
 }
 .game-card--title { font-size: 20px; text-transform: uppercase }
+
+
+/*http://philipwalton.com/articles/side-effects-in-css/*/
